--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             'fonte.png': 'Fonte com certificação 80 Plus Gold para estabilidade energética contínua.',
             'gabinete.png': 'Gabinete com boa circulação de ar, ideal para manter o servidor refrigerado.',
             'windserver2022.png': 'Sistema operacional robusto, com recursos avançados de segurança e controle.',
-            'SQL2022.png': 'Banco de dados robusto, confiável e altamente compatível com ERP corporativos.'
+            'sql2022.png': 'Banco de dados robusto, confiável e altamente compatível com ERP corporativos.'
         };
 
         function showComponent(imgName) {
