--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <button onclick="showComponent('6.png')">Fonte</button>
         <button onclick="showComponent('7.png')">Gabinete</button>
         <button onclick="showComponent('windserver2022.png')">Windows Server 2022</button>
-        <button onclick="showComponent('SQL2022.png')">SQL Server 2022</button>
+        <button onclick="showComponent('sql2022.png')">SQL Server 2022</button>
     </div>
 
     <div class="component-viewer">
